// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`omf motion editing should duplicate a motion that plays once 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Copied motion 'idle' to 'idle_once', playing once, written into <sandbox>/duplicated-once.omf",
  ],
}
`;

exports[`omf motion editing should duplicate a motion under a new name 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Copied motion 'idle' to 'idle_copy', written into <sandbox>/duplicated.omf",
  ],
}
`;

exports[`omf motion editing should keep a named motion 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Filtered omf motions <resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf, 1/3 kept",
    "Filtered omf file written into <sandbox>/kept-idle.omf",
  ],
}
`;

exports[`omf motion editing should keep motions by prefix 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Filtered omf motions <resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf, 2/3 kept",
    "Filtered omf file written into <sandbox>/kept-svd.omf",
  ],
}
`;

exports[`omf motion editing should read back only the kept motions 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read omf file <sandbox>/kept-svd.omf",
    "Omf file information",
    "Version: 4",
    "Motions: 2 svd_shoot,svd_reload",
    "Bones total: 7",
    "Parts: default",
    "Part 'default' bones: wpn_body,body,trigger,wpn_scope,zatvor,lock,magazin",
  ],
}
`;

exports[`omf motion editing should read back the duplicated motion 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read omf file <sandbox>/duplicated.omf",
    "Omf file information",
    "Version: 4",
    "Motions: 4 idle,svd_shoot,svd_reload,idle_copy",
    "Bones total: 7",
    "Parts: default",
    "Part 'default' bones: wpn_body,body,trigger,wpn_scope,zatvor,lock,magazin",
  ],
}
`;

exports[`omf motion editing should read back the renamed motions 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read omf file <sandbox>/renamed.omf",
    "Omf file information",
    "Version: 4",
    "Motions: 3 stand,fire,svd_reload",
    "Bones total: 7",
    "Parts: default",
    "Part 'default' bones: wpn_body,body,trigger,wpn_scope,zatvor,lock,magazin",
  ],
}
`;

exports[`omf motion editing should reject an incomplete map under strict 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Execution of command 'rename-omf-motions' failed, error: Invalid error: Refused to rename <resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf in strict mode, 1 motions are missing from the map: svd_reload",
  ],
  "stdout": [],
}
`;

exports[`omf motion editing should rename motions through a map 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Renamed omf motions <resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf, 2/3 renamed",
    "Renamed omf file written into <sandbox>/renamed.omf",
  ],
}
`;

exports[`omf motion editing should report a filter dry run without writing 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Filtered omf motions <resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf, 1/3 kept",
    "Dry run, nothing written, <sandbox>/never-written.omf would receive 1 motions",
  ],
}
`;

exports[`omf motion editing should report a rename dry run without writing 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Renamed omf motions <resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf, 2/3 renamed",
    "Dry run, nothing written, <sandbox>/never-renamed.omf would receive 2 renamed motions",
  ],
}
`;

exports[`omf motion editing should write the expected files 1`] = `
[
  {
    "path": "duplicated-once.omf",
    "sha256": "d55eb93e317f9c29180809868725ba1a9645b484e2be54c4bca1f0fe58955319",
    "size": 3562,
  },
  {
    "path": "duplicated.omf",
    "sha256": "d73bc7e8ed9dda81ef4827ef46b48e465b7dc4af8f0c93c0537da66d3d386c82",
    "size": 3562,
  },
  {
    "path": "kept-idle.omf",
    "sha256": "0d6070cb2dc20aa5a4b1231db0ec8e4e855e98dea2ce2d317670177209525e66",
    "size": 321,
  },
  {
    "path": "kept-svd.omf",
    "sha256": "e4d8b2326e0d3455d5e4efa81447008b453d3355b8fc0e8c05636e6838ec65dd",
    "size": 3158,
  },
  {
    "path": "rename-map.json",
    "sha256": "8677ebb7c1a27fbe3c916efd8814212cd998e3ce1db0aeeba2a718ffe5367400",
    "size": 45,
  },
  {
    "path": "renamed.omf",
    "sha256": "eec0dbbd0288c692d3960bce4c56c6645be99210f73fa5a49116019b3cd03ba9",
    "size": 3347,
  },
]
`;
